cabal-version:       2.2

name:                algorithms-defence
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algorithms-defence#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable algorithms-defence
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       Game.Config
                     , Game.Render
                     , Game.Shapes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
